<resources>
    <string name="app_name">tugasmcdonarius</string>
    <string name="nama_buku">Nama Buku</string>
    <string name="harga_buku">Harga Buku</string>
    <string name="todo">TODO</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="Todo">TODO</string>
    <string name="register">Register</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="username">Username</string>
    <string name="Register">REGISTER</string>
    <string name="TODO">TODO</string>
    <string name="TOdo">TODO</string>
    <string name="Forgot_password">FORGOT PASSWORD</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="Ikigai"> Tahukah Anda? Menurut Organisasi Kesehatan Dunia (WHO) Negara Jepang memiliki tingkat harapan hidup tertinggi dibandingkan Negara lain. Bahkan, banyak penduduk Jepang yang berusia 100 tahun atau lebih yang sering kita sebut juga centenarian dan supercentenarian. Apakah Anda tahu apa itu Centenarian? Centenarian adalah seseorang yang hidup berumur 100 tahun. Sedangkan, Supercentenarian adalah orang yang hidup hingga usia 110 atau lebih. Hal ini terbukti dari piramida penduduk jepang. Jepang memiliki piramida kontruktif. Dimana dalam piramida kontruktif, penduduk yang berada dalam kelompok muda berjumlah sedikit dengan tingkat kelahiran yang menurun dan angka kematian yang rendah."</string>
    <string name="George_Orwell_1984">Kengerian yang diciptakan oleh Orwell dalam 1984 menarik perhatian besar pembaca. Novel yang rampung ditulis pada tahun 1948 dengan setting 1984 ini seolah adalah ramalan yang Orwell tulis yang benar-benar terjadi di masa depan. Novel klasik ini hadir dengan berani mengangkat isu politik yang barangkali pada saat Orwell menulis ini belum terjadi dan benar-benar terjadi pada kondisi politik dunia saat ini, karena kebenarannya sudah mulai terlihat.</string>
    <string name="Hidup_AntiGalau">Buku ini bertujuan untuk memahami tantangan yang dihadapi oleh kaum muda berusia 20-an, bukan hanya sekadar mengemukakan omong kosong belaka, buku ini juga memberikan nasihat yang konkret dan menjelaskan bagaimana caranya untuk mewujudkan mimpi. Saya yakin bahwa saya memahami situasi sulit yang sedang mereka hadapi saat ini. Kita semua  sedang mengalami masa-masa yang sulit. Saya pernah merasa cemas dan takut akan masa depan. Sama sepertikamu, saya juga pernah mengalami frustasi dalam mencari pekerjaan, dan saya tahu betapa sulitnya hal itu.</string>
    <string name="Cerita_Rakyat">Dalam cerita rakyat biasanya menceritakan suatu tempat dan asal muasal tokoh-tokoh yang dimunculkan pada cerita rakyat tersebut. Tokoh cerita rakyat yang disampaikan tersebut bisa dalam bentuk manusia, binatang, dan sesuatu yang gaib lainnya. Isi dari cerita rakyat yang ada itu sudah berkembang di tengah masyarakat</string>
    <string name="Tak_Pernah">Alvi Syahrin menuliskan buku ini dengan format membaginya ke dalam sejumlah cerita pendek yang ringan untuk dibaca, karena relevan dengan kehidupan sehari-hari pembaca. Alvi Syahrin menyatakan bahwa ia menulis buku ini untuk kalian para murid yang masih sekolah, mahasiswa yang sedang kuliah, seorang fresh graduate yang sedang mencari pekerjaan, para pekerja di usia seperempat abad.</string>
    <string name="Slow_Down">Buku ini memuat delapan bab yang membahas mengenai permasalahan kehidupan sehari-hari. Mulai dari hubungan dengan Tuhan, hubungan dengan manusia, pekerjaan, hingga bagaimana cara menerapkan sikap mindfulness dalam menghadapi dunia yang bergerak sangat cepat. Setiap bab diawali prolog yang ditulis berdasarkan pengalaman dan pemikiran pribadi penulis. Kemudian diikuti nasihat bijak yang sederhana, ringkas, to the point, dan mengena baik dari pribadi penulis maupun beberapa kutipan tokoh dunia dan kitab suci. Pesan atau nasihat disampaikan serasa realistik dan tidak menggurui serta memberikan dampak positif bagi pembaca. </string>
    <string name="Bicara_Itu_Seni">Buku bicara itu ada seninya berisi tentang pengalaman pengembangan diri, teknik komunikasi, persuasi dan negosiasi. Buku bersampul hitam ini akan menjawab pertanyaan: Bagaimana cara berbicara/berucap yang baik? Ucapan yang baik adalah ucapan yang dapat menggetarkan hati.</string>
    <string name="Master_Your_Pain">Buku “Master Your Pain” adalah sebuah analogi terbalik tentang cara menikmati rasa sakit. Kita tidak selalu harus disemangati, atau didorong untuk bisa menolak rasa sakit yang menggerogoti hati, lebih dari itu, karena buku ini menyoroti bagaimana mengolah rasa sakit dan menyimpan “deposit” yang bisa</string>
    <string name="Anak_Islam">Mengajarkan anak-anak kita pembelajaran tentang agama Islam adalah sebuah keharusan bagi setiap orang tua muslim. Hal tersebut dilakukan sebagai bekal untuk anak-anak kita kelak, karena sejak kecil sudah ditanamkan ilmu-ilmu agama. Dalam Islam, anak adalah amanah. Maka amanah dari Allah ini harus dijaga sebaik-baiknya seperti yang dikehendaki Allah Ta\'ala. Orang tua harus berusaha mendidik anaknya menjadi anak yang saleh sejak dini. Cara mendidik anak secara Islami tentu saja harus sesuai dengan pesan dari Rasulullah Shallallahu alaihi wa sallam.</string>
    <string name="Spektrum">Tiap warna menyimpan cerita dan setiap cerita menyimpan makna. Biru berkisah tentang kehangatan yang ia berikan untuk seorang gadis berhati beku. Merah menuturkan takdir yang dibawanya untuk sesosok bintang. Abu-abu menggambarkan dunia seorang pemuda sebelum seseorang datang dan mengajarinya arti warna. Spektrum hadir membawa sejumlah kisah, memberi warna lewat untai aksara.</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="forgotpassword">ForgotPassword</string>
    <string name="tahukah_anda_menurut_organisasi_kesehatan_dunia_who_negara_jepang_memiliki_tingkat_harapan_hidup_tertinggi_dibandingkan_negara_lain_bahkan_banyak_penduduk_jepang_yang_berusia_100_tahun_atau_lebih_yang_sering_kita_sebut_juga_centenarian_dan_supercentenarian_apakah_anda_tahu_apa_itu_centenarian_centenarian_adalah_seseorang_yang_hidup_berumur_100_tahun_sedangkan_supercentenarian_adalah_orang_yang_hidup_hingga_usia_110_atau_lebih_hal_ini_terbukti_dari_piramida_penduduk_jepang_jepang_memiliki_piramida_kontruktif_dimana_dalam_piramida_kontruktif_penduduk_yang_berada_dalam_kelompok_muda_berjumlah_sedikit_dengan_tingkat_kelahiran_yang_menurun_dan_angka_kematian_yang_rendah">tahukah_anda_menurut_organisasi_kesehatan_dunia_who_negara_jepang_memiliki_tingkat_harapan_hidup_tertinggi_dibandingkan_negara_lain_bahkan_banyak_penduduk_jepang_yang_berusia_100_tahun_atau_lebih_yang_sering_kita_sebut_juga_centenarian_dan_supercentenarian_apakah_anda_tahu_apa_itu_centenarian_centenarian_adalah_seseorang_yang_hidup_berumur_100_tahun_sedangkan_supercentenarian_adalah_orang_yang_hidup_hingga_usia_110_atau_lebih_hal_ini_terbukti_dari_piramida_penduduk_jepang_jepang_memiliki_piramida_kontruktif_dimana_dalam_piramida_kontruktif_penduduk_yang_berada_dalam_kelompok_muda_berjumlah_sedikit_dengan_tingkat_kelahiran_yang_menurun_dan_angka_kematian_yang_rendah</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="lupa">Forgot Password?</string>
    <string name="sudah_punya_akun">Sudah Punya Akun.</string>
</resources>
