<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/img_5">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img_2"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/Todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="146dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="12dp"
        android:textColor="@color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/baseline_lock_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:text="@string/Login" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="78dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="95dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/purple_700"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvForgotPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textStyle="bold" />

</RelativeLayout>
</layout>