<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/img_5">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="129dp"
        android:layout_height="122dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/img_4"
        android:contentDescription="@string/TOdo" />

    <TextView
        android:id="@+id/tvLupa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="228dp"
        android:text="@string/Forgot_password"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLupa"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_your_email"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="12dp"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextEmail"
        android:layout_marginTop="24dp"
        android:text="@string/reset_password"/>

</RelativeLayout>
</layout>